# micropolis-rs

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  twin.d.ts
.github/workflows/: ci.yml
micropolis_core/: Cargo.toml
micropolis_core/src/: city.rs  game.rs  interface.rs  lib.rs  map.rs  messages.rs  simulation.rs  utils.rs
micropolis_core/src/city/: budget.rs  disasters.rs  evaluate.rs  generator.rs  meta.rs  population.rs  power.rs  reports.rs  simulation.rs  sprite.rs  traffic.rs  zoning.rs
micropolis_core/src/city/simulation/: census.rs  parameters.rs  scan.rs  sprites.rs  statistics.rs  taxes.rs  zones.rs
micropolis_core/src/map/: animations.rs  buildings.rs  connect.rs  generator.rs  position.rs  tiles.rs  tiles_type.rs  tools.rs
micropolis_core/src/map/animations/: loader.rs
micropolis_core/src/map/generator/: constants.rs  trees.rs  utils.rs  water.rs
micropolis_core/src/map/tools/: effects.rs  toolbox.rs  utils.rs
micropolis_core/src/messages/: parser.rs
micropolis_core/src/utils/: random.rs
micropolis_quicksilver/: Cargo.toml
micropolis_quicksilver/src/: main.rs  tiles.rs
micropolis_utils/: Cargo.toml  README.md
micropolis_utils/output/: test-front-map.json
micropolis_utils/src/: main.rs
micropolis_wasm/: .gitignore  Cargo.toml
micropolis_wasm/src/: city.rs  lib.rs  map.rs
micropolis_web_front/: .babelrc  .dockerignore  .editorconfig  .eslintrc  .gitignore  .prettierrc  .prettierrc.json  .rsw.json  Dockerfile  next.config.js  next.config.mjs  package.json  postcss.config.cjs  postcss.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json
micropolis_web_front/.rsw/paths/: micropolis_wasm
micropolis_web_front/.storybook/: .babelrc  addons.ts  config.js  config.ts  main.js  preview-head.html  preview.js  preview.ts  webpack.config.js
micropolis_web_front/app/: globals.scss  layout.tsx
micropolis_web_front/assets/styles/: tailwind.css
micropolis_web_front/components/: Head.tsx  Nav.tsx  head.tsx  nav.tsx
micropolis_web_front/components/common/: Button.tsx  Card.tsx  CheckboxInput.tsx  LoaderSpinner.stories.tsx  LoaderSpinner.tsx  TextInput.tsx
micropolis_web_front/components/common/stories/: Button.stories.tsx  Card.stories.tsx  CheckboxInput.stories.tsx  LoaderSpinner.stories.tsx  StoryWrapper.tsx  TextInput.stories.tsx
micropolis_web_front/components/game/: GameCoreLibProvider.tsx  GameLayout.tsx  GameScreen.tsx  MapRenderer.stories.tsx  MapRenderer.tsx  NewGameScreen.tsx  PixiContainer.tsx  Tile.tsx
micropolis_web_front/components/game/stories/: GameLayout.stories.tsx  MapRenderer.stories.tsx  NewGameScreen.stories.tsx
micropolis_web_front/components/ui/: Toolbar.tsx  Toolbox.tsx
micropolis_web_front/components/ui/stories/: Toolbar.stories.tsx  Toolbox.stories.tsx
micropolis_web_front/game/: index.ts  map.ts  toolbox.ts  utils.ts
micropolis_web_front/layouts/: main.stories.tsx  main.tsx
micropolis_web_front/pages/: _app.tsx  _document.tsx  about.tsx  index.tsx
micropolis_web_front/src/: app.css
micropolis_web_front/src/game/: index.ts  toolbox.ts  utils.ts
micropolis_web_front/src/lib/: Nav.svelte
micropolis_web_front/src/lib/game/: MapRenderer.svelte  NewGameScreen.svelte  Tile.svelte
micropolis_web_front/src/lib/ui/: Button.svelte  Card.svelte  TextInput.svelte
micropolis_web_front/src/routes/: __layout.svelte  index.svelte
micropolis_web_front/src/utils/: index.ts
micropolis_web_front/styles/: globals.scss
micropolis_web_front/tests/: utils.test.ts
micropolis_web_front/types/: tailwind.macro.d.ts
micropolis_web_front/utils/: index.ts  keys.ts
micropolis_web_front/vite/: wasm-plugin.js
res/: animations_sequences.txt
