[package]
name = "micropolis_rs_core"
version = "0.0.1"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
num-traits = "0.2.15"
num-derive = "0.3.3"
quick-xml = { version = "0.27.1", features = ["encoding"] }
chrono = { version = "0.4.23", features = [ "wasmbind" ] }
