[package]
name = "micropolis_rs_core"
version = "0.0.1"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
num-traits = "0.2.14"
num-derive = "0.4.0"
quick-xml = { version = "0.29.0", features = ["encoding"] }
chrono = { version = "0.4.26", features = [ "wasmbind" ] }
