[package]
name = "micropolis_rs_core"
version = "0.0.1"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
num-traits = "0.2.19"
num-derive = "0.4.2"
quick-xml = { version = "0.38.4", features = ["encoding"] }
chrono = { version = "0.4.42", features = ["wasmbind"] }
