[package]
name = "micropolis_rs_quicksilver"
version = "0.0.1"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "micropolis-rs-client"
path = "src/main.rs"

[dependencies]
micropolis_rs_core = { path = "../micropolis_core" }

[dependencies.quicksilver]
version = "0.3.7"
default-features = false
features = ["fonts", "sounds"]
