[package]
name = "micropolis_rs_quicksilver"
version = "0.0.1"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "micropolis-rs-client"
path = "src/main.rs"

[dependencies]
micropolis_rs_core = { path = "../micropolis_core" }
# console_error_panic_hook = "0.1.6" # crash with cargo web

[dependencies.rand]
version = "0.7.3"
default-features = false
features = ["std", "stdweb"]

[dependencies.quicksilver]
version = "0.3.22"
default-features = false
features = ["fonts", "sounds"]
