[package]
name = "micropolis_rs_utils"
version = "0.0.1"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "micropolis-rs-utils"
path = "src/main.rs"

[dependencies]
micropolis_rs_core = { path = "../micropolis_core" }
clap = "3.0.0-beta.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
