[package]
name = "micropolis_rs_utils"
version = "0.0.1"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "micropolis-rs-utils"
path = "src/main.rs"

[dependencies]
micropolis_rs_core = { path = "../micropolis_core" }
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
