[package]
name = "micropolis_rs_wasm"
version = "0.0.1"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
micropolis_rs_core = { path = "../micropolis_core" }
serde = "1.0.125"
serde_derive = "1.0.125"
console_error_panic_hook = "0.1.6"

[dependencies.wasm-bindgen]
version = "0.2.72"
features = ["serde-serialize"]
